--- a/extensions/gdx-setup/src/com/badlogic/gdx/setup/resources/android/AndroidManifest.xml
+++ b/extensions/gdx-setup/src/com/badlogic/gdx/setup/resources/android/AndroidManifest.xml
@@ -20,6 +20,8 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <!-- Uncomment this for Android TV support -->
+                <!-- <category android:name="android.intent.category.LEANBACK_LAUNCHER" /> --> 
             </intent-filter>
         </activity>
     </application>
